# orchard_path_planning

./: .gitignore  README.md  ackermann_model.py  advanced_benchmark.py  benchmark.py  create_ackermann_report.py  create_report.py  requirements.txt  risk_corridor_mppi.py  se2_hybrid_astar.py  two_layer_benchmark.py
OAG-HRRT*_BCPA/: RRT_start_optimize.py  RRT_start_optimize_corridor.py  hybrid_movebase_bridge.py  interactivate_exp.py  interactive_ablation_planner.py  orchard_simple.npz
global_path_planning/: RRT.py  RRT_star.py  a_star.py
local_path_planning/: RECOVERY_README.md  TEB_FAILURE_FIX.md  TEB_FIX_SUMMARY.md  TEB_INTERACTIVE_README.md  TEB_RECOVERY_MECHANISM.md  __init__.py  base.py  config.py  config_loader.py  dwa.py  quick_recovery_check.py  teb.py  teb_interactive.py  test_continuous_failure.py  test_debug_failure.py  test_recovery.py  test_teb_collision.py  test_teb_constraints.py  test_teb_debug.py
local_path_planning/teb/g2o_backend/: CMakeLists.txt  build_backend.sh  g2o_native.cpp
oag_hrrt_dwa/: README.md  config.yaml  generate_environment.py  oag_hrrt_dwa_demo.py  orchard_scene.npz  局部路径规划算法分析.md
path_optimizer/: FINAL_SUMMARY.txt  GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  curvature_smoother.py  integration.py  shortcut.py  test_curvature_smoother.py  test_shortcut.py
results/: ablation.csv  ackermann_metrics.csv  ackermann_summary.csv  method.md  metrics.csv  summary.csv  two_layer_metrics.csv  two_layer_summary.csv
vehicle/: ackerman_RRT.py  ackerman_dwa.py  ackerman_teb.py  dubins_path_test.py  reeds_shepp_core.py  (+4 more)
(+401 files in other folders)
